2010-02-28  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: implement bottom and ans

2010-02-25  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* testsuite/TestMLPSolver.cpp: updating comments

	* include/dlvhex/MLPSolver.hpp: implement smallest ILL

2010-02-23  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: implement rewrite

	* include/dlvhex/ID.hpp: modified the ID for module atom, adapted to isOrdinaryAtom() method
	* src/dlvhex/ID.cpp: Likewise

2010-02-06  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* src/dlvhex/HexGrammarPTToASTConverter.cpp: separated the method to mark the External rule and Module rule

2010-02-05  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: adding MLPSolver
	* include/dlvhex/ModuleTable.hpp: Likewise
	* include/dlvhex/ModuleSyntaxChecker.hpp: Likewise
	* include/dlvhex/Registry.hpp: Likewise
	* include/dlvhex/ProgramCtx.h: Likewise
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Likewise
	* src/dlvhex/Registry.cpp: Likewise

	* example/module1.hex: modified example for mlp

	* testsuite/Makefile.am: add test case for the MLP solver
	* testsuite/TestHexParserModule.cpp: Likewise
	* testsuite/TestMLPSolver.cpp: Likewise

2011-01-31  Peter Schueller  <ps@kr.tuwien.ac.at>

	* examples/variable_predicate_inputs.hex: Added .hex file that demonstrates
	a foundational dependency graph deficiency in dlvhex 1.x that prohibits
	variables for predicate inputs in dlvhex 2.x.

2011-01-10  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/dlvhex/PluginContainer.cpp: More verbose plugin loading.

2010-12-21  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/ProgramCtx.h: include boost/functional/factory.hpp compiled

	* src/dlvhex/HexGrammarPTToASTConverter.cpp: extend DLVresultParserDriver to support terms and preds table
	* src/dlvhex/DLVresultParserDriver.cpp: Likewise